--- a/pages/TSL/TSL.wxml
+++ b/pages/TSL/TSL.wxml
@@ -1,5 +1,8 @@
-<scroll-view class='background' scroll-y="true"  style='height:{{deviceHeight}}px'>
-
+<!--<scroll-view class='background' scroll-y="true" style='height:{{deviceHeight}}px'></scroll-view>-->
+<view class='backgroundImageBase' >
+  <image  class='backgroundImage' style='height:{{deviceHeight*1.5}}px'></image>
+</view>
+<view class='background'>
   <view wx:if='{{addNew}}' class='addInputBase'>
     <input id='inputBox' class='addInput' bindconfirm='inputNewItem'></input>
   </view>
@@ -7,34 +10,34 @@
     <image src='../../image/plus2.png' catchtap='addNewItem' class='addButtonImage'></image>
   </view>
 
-  <view wx:for='{{TSList}}' catchtouchmove='itemMove' bindtouchstart='itemStartMove' id='{{index}}' class='nodeBase'>
+  <view wx:for='{{TSList}}' bindtouchmove='itemMove' bindtouchstart='itemStartMove' id='{{index}}' class='nodeBase'>
     <view class='horizontalLine'></view>
     <view class='node'>
-      <view hidden='{{!removed[index]}}'>
+      <view hidden='{{!item.removed}}'>
         <image src='../../image/recall.png' class='recallImage' bindtap='recallItem' id='{{index}}'></image>
       </view>
-      <view hidden='{{removed[index]}}'>
-        <view wx:if='{{isOpen[index]}}' style='left:{{left[index]}}px;'>
-          <view wx:if='{{editable[index]}}' class='editItemBase'>
-            <input  class='editItemInput' bindconfirm='editItemInput' value='{{editValue}}' id='{{index}}'></input>
+      <view hidden='{{item.removed}}'>
+        <view wx:if='{{item.isOpen}}' catchtap='openItem' id='{{index}}' style='left:{{left[index]}}px;'>
+          <view wx:if='{{item.editable}}'  class='editItemBase'>
+            <input class='editItemInput' bindconfirm='editItemInput' value='{{editValue}}' id='{{index}}'></input>
           </view>
-          <view wx:else catchtap='openItem' id='{{index}}'>
+          <view wx:else >
             <text>{{item.content}}</text>
           </view>
           <view class='time_view'>
             <text class='time'>{{item.time}}</text>
           </view>
           <view class='operation_view'>
-            <image src='../../image/finish.png' class='finishButtonImage'></image>
+            <image src='../../image/{{item.finishedImage}}.png' catchtap='finishItem' id='{{index}}' class='finishButtonImage'></image>
             <image src='../../image/edit.png' catchtap='editItem' id='{{index}}' class='editButtonImage'></image>
             <image src='../../image/remove.png' catchtap='removeItem' id='{{index}}' class='removeButtonImage'></image>
           </view>
         </view>
-        <view wx:else class='node' style='left:{{left[index]}}px;'>
-          <view catchtap='openItem' id='{{index}}'>
-            <text>{{item.digest}}</text>
+        <view wx:else class='node' catchtap='openItem' id='{{index}}' style='left:{{left[index]}}px;'>
+          <view >
+            <text style='{{item.finished}}'>{{item.digest}}</text>
           </view>
-          <view>
+          <view class='time_view'>
             <text class='time'>{{item.time}}</text>
           </view>
         </view>
@@ -45,9 +48,9 @@
   <view class='horizontalLine'></view>
   <view style='background-color:white;'>到底啦！</view>
 
-</scroll-view>
+</view>
 
-
+<!--
 <view style=" display:flex;" class='bottomBar'>
   <view class='verticalLine'></view>
   <view class='lockImageBase' catchtap='lockPanel'>
@@ -65,3 +68,4 @@
   </view>
   <view class='verticalLine'></view>
 </view>
+-->
