--- a/pages/TSL/TSL.wxss
+++ b/pages/TSL/TSL.wxss
@@ -15,7 +15,7 @@
 }
 
 .backgroundImage {
-  background-color: pink;
+  background-color: black;
   background-image: url(http://www.qq1234.org/uploads/allimg/150410/3_150410145324_5.jpg);
 }
 
