--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -14,6 +14,8 @@
 <button bindtap='netTest'>测试</button>
 <button bindtap='showRecommend'>显示推荐</button>
 <button bindtap='mainPage'>进入主页</button>
+<button bindtap='mainPage2'>进入临时主页</button>
+
 <image src='{{img_url}}' ></image>
 
   <view class="usermotto">
