--- a/pages/TSLs/TSLs.wxml
+++ b/pages/TSLs/TSLs.wxml
@@ -1,3 +1,4 @@
+<!--pages/TSLs/TSLs.wxml-->
 /* pages/TSL/TSL.wxss */
 
 .background {
@@ -16,7 +17,7 @@
 
 .backgroundImage {
   background-color: black;
-  background-image: url(https://tse3.mm.bing.net/th?id=OIP.wQlyEw-qIdmLVhJracJQ1AHaFi&pid=Api&dpr=1);
+  background-image: url(http://www.qq1234.org/uploads/allimg/150410/3_150410145324_5.jpg);
   width: 100%;
   background-repeat: repeat;
 }
@@ -89,8 +90,7 @@
 }
 
 .addButtonBase {
-  background-color: white;  
-  margin-top: 8px;
+  background-color: white;
 }
 
 .addButtonImage {
@@ -101,8 +101,8 @@
 
 .addInputBase {
   background-color: white;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .addInput {
@@ -136,3 +136,4 @@
   width: 1%;
   background-color: whitesmoke;
 }
+
