--- a/pages/TSL/TSL.wxml
+++ b/pages/TSL/TSL.wxml
@@ -1,62 +1,67 @@
 <!--<scroll-view class='background' scroll-y="true" style='height:{{deviceHeight}}px'></scroll-view>-->
 
+<!--
 <view class='backgroundImageBase'>
-  <image class='backgroundImage' style='height:{{deviceHeight*1.5}}px'></image>
+	<image class='backgroundImage' style='height:{{deviceHeight*1.5}}px'></image>
 </view>
+-->
 <view class='background'>
 
- <!--新增按钮-->
-  <view wx:if='{{addNew}}' class='addInputBase'>
-    <input id='inputBox' class='addInput' bindconfirm='inputNewItem'></input>
-  </view>
-  <view wx:else class='addButtonBase'>
-    <button catchtap='addNewItem'>
-      <image src='../../image/plus2.png' class='addButtonImage'></image>
-    </button>
 
-  </view>
+	<!--新增按钮-->
+	<view wx:if='{{addNew}}' class='addInputBase'>
+		<input id='inputBox' class='addInput' bindconfirm='inputNewItem'></input>
+	</view>
+	<view wx:else class='addButtonBase'>
+		<button catchtap='addNewItem'>
+			<image src='../../image/plus2.png' class='addButtonImage'></image>
+		</button>
+	</view>
 
-  <view wx:for='{{_TSL_List}}' bindtouchmove='itemMove' bindtouchstart='itemStartMove' id='{{index}}' class='nodeBase'>
-    <view class='horizontalLine'></view>
-    <view class='node'>
-      <view hidden='{{!item.removed}}'>
-        <image src='../../image/recall.png' class='recallImage' bindtap='recallItem' id='{{index}}'></image>
-      </view>
-      <view hidden='{{item.removed}}'>
-        <view wx:if='{{item.isOpen}}' style='left:{{left[index]}}px;'>
-          <view wx:if='{{item.editable}}' class='editItemBase'>
-            <input class='editItemInput' bindconfirm='editItemInput' value='{{editValue}}' id='{{index}}'></input>
-            <view class='time_view'>
-              <text class='time'>{{item.time}}</text>
-            </view>
-          </view>
-          <view wx:else catchtap='openItem' id='{{index}}'>
-            <text style='{{item.finished}}'>{{item.content}}</text>
-            <view class='time_view'>
-              <text class='time'>{{item.time}}</text>
-            </view>
-          </view>
-          <view class='operation_view'>
-            <image src='../../image/{{item.finishedImage}}.png' catchtap='finishItem' id='{{index}}' class='finishButtonImage'></image>
-            <image src='../../image/edit.png' catchtap='editItem' id='{{index}}' class='editButtonImage'></image>
-            <image src='../../image/remove.png' catchtap='removeItem' id='{{index}}' class='removeButtonImage'></image>
-          </view>
-        </view>
-        <view wx:else class='node' catchtap='openItem' id='{{index}}' style='left:{{left[index]}}px;'>
-          <view>
-            <text style='{{item.finished}}'>{{item.digest}}</text>
-          </view>
-          <view class='time_view'>
-            <text class='time'>{{item.time}}</text>
-          </view>
-        </view>
-      </view>
-    </view>
-  </view>
 
-  <view class='horizontalLine'></view>
-  <view style='background-color:white;'>到底啦！</view>
+<!--记录-->
+	<view wx:for='{{_TSL_List}}' bindtouchmove='itemMove' bindtouchstart='itemStartMove' id='{{index}}' class='nodeBase'>
+		<view class='horizontalLine'></view>
+		<view class='node'>
+			<view hidden='{{!item.removed}}'>
+				<image src='../../image/recall.png' class='recallImage' bindtap='recallItem' id='{{index}}'></image>
+			</view>
+			<view hidden='{{item.removed}}'>
+				<view wx:if='{{item.isOpen}}' style='left:{{left[index]}}px;'>
+					<view wx:if='{{item.editable}}' class='editItemBase'>
+						<input class='editItemInput' bindconfirm='editItemInput' value='{{editValue}}' id='{{index}}'></input>
+						<view class='time_view'>
+							<text class='time'>{{item.time}}</text>
+						</view>
+					</view>
+					<view wx:else catchtap='openItem' id='{{index}}'>
+						<text class='ContentText' style='{{item.finished}}'>{{item.content}}</text>
+						<view class='time_view'>
+							<text class='time'>{{item.time}}</text>
+						</view>
+					</view>
+					<view class='operation_view'>
+						<image src='../../image/{{item.finishedImage}}.png' catchtap='finishItem' id='{{index}}' class='finishButtonImage'></image>
+						<image src='../../image/edit.png' catchtap='editItem' id='{{index}}' class='editButtonImage'></image>
+						<image src='../../image/remove.png' catchtap='removeItem' id='{{index}}' class='removeButtonImage'></image>
+					</view>
+				</view>
+				<view wx:else class='node' catchtap='openItem' id='{{index}}' style='left:{{left[index]}}px;'>
+					<view>
+						<text class='ContentText' style='{{item.finished}}'>{{item.digest}}</text>
+					</view>
+					<view class='time_view'>
+						<text class='time'>{{item.time}}</text>
+					</view>
+				</view>
+			</view>
+		</view>
+	</view>
+
+	<view class='horizontalLine'></view>
+	<view style='background-color:white;'>到底啦</view>
 </view>
+
 
 <!--
 <view style=" display:flex;" class='bottomBar'>
